plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'raisetech'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

// @Lombokなどをコンパイル時のみ適用
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// Thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// OpenAPI Generator
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	// 便利機能、ユーティリティ
	implementation 'org.apache.commons:commons-lang3:3.14.0'
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	// MySQLドライバ
	runtimeOnly 'com.mysql:mysql-connector-j'
	// MyBatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	// APサーバー（Tomcat）
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	// .envファイルの使用
	implementation 'me.paulschwarz:spring-dotenv:3.0.0'
	// SpringBoot Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// MyBatis Test
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	// H2(InMemoryDB)
	testImplementation 'com.h2database:h2:2.2.224'
}

tasks.named('test') {
	useJUnitPlatform()
}
